@@ -369,6 +369,8 @@ extern struct WPreferences {
 	char no_animations;                /* enable/disable animations */
 	char no_autowrap;                  /* wrap workspace when window is moved to the edge */
 	char window_snapping;              /* enable window snapping */
+	int snap_edge_detect;              /* how far from edge to begin snap */
+	int snap_corner_detect;            /* how far from corner to begin snap */
 	char drag_maximized_window;        /* behavior when a maximized window is dragged */
 
 	char highlight_active_app;         /* show the focused app by highlighting its icon */
